--- a/Config.ini
+++ b/Config.ini
@@ -103,4 +103,4 @@ tcp_fast_open_flag=true
 filter_deprecated_nodes=true
 clash_use_new_field_name=true
 overwrite_original_rules=true
-clash_rule_base=https://raw.githubusercontent.com/HotKids/Rules/master/subconverter/Clash.yaml
+clash_rule_base=https://raw.githubusercontent.com/dengfenga777/subconverter/master/Config.ini
