--- a/Config.ini
+++ b/Config.ini
@@ -44,7 +44,7 @@ custom_proxy_group=💳 PayPal`select`[]🔘 DIRECT`[]🇺🇸 America`[]🔰 Pr
 custom_proxy_group=🚧 AdGuard`select`[]REJECT`[]DIRECT
 custom_proxy_group=🔘 DIRECT`select`[]DIRECT`(中国|China|GCX)
 custom_proxy_group=🇺🇳 Server`select`.*
-custom_proxy_group=🇭🇰 Hong Kong`select`(香港高级 IPLC|香港高级 9929|香港高级 CN2|香港标准 IPLC|香港高级 BGP)`
+custom_proxy_group=🇭🇰 Hong Kong`select`香港`
 custom_proxy_group=🇹🇼 Taiwan`select`(台湾|台|台北|台中|新北|彰化|TW|Taiwan)`
 custom_proxy_group=🇯🇵 Japan`select`(日本|东京|大阪|埼玉|深日|穗日|沪日|京日|泉日|川日|JP|Japan)`
 custom_proxy_group=🇰🇷 Korea`select`(韩国|韩|首尔|KR|Korea)`
