--- a/Config.ini
+++ b/Config.ini
@@ -42,7 +42,7 @@ custom_proxy_group=🍎 Apple`select`[]🔘 DIRECT`[]🇺🇸 America`[]🔰 Pro
 custom_proxy_group=📮 Telegram`select`[]🔰 Proxy`[]🇸🇬 Singapore`[]🔘 DIRECT
 custom_proxy_group=💳 PayPal`select`[]🔘 DIRECT`[]🇺🇸 America`[]🔰 Proxy
 custom_proxy_group=🚧 AdGuard`select`[]REJECT`[]DIRECT
-custom_proxy_group=🔘 DIRECT`select`[]DIRECT`(中国|China|GCX)
+custom_proxy_group=🔘 DIRECT`select`[]DIRECT`
 custom_proxy_group=🇺🇳 Server`select`.*
 custom_proxy_group=🇭🇰 Hong Kong`select`(香港|港|HK|Hong Kong)`
 custom_proxy_group=🇹🇼 Taiwan`select`(台湾|台|台北|台中|新北|彰化|TW|Taiwan)`
