--- a/Config.ini
+++ b/Config.ini
@@ -42,15 +42,15 @@ custom_proxy_group=🍎 Apple`select`[]🔘 DIRECT`[]🇺🇸 America`[]🔰 Pro
 custom_proxy_group=📮 Telegram`select`[]🔰 Proxy`[]🇸🇬 Singapore`[]🔘 DIRECT
 custom_proxy_group=💳 PayPal`select`[]🔘 DIRECT`[]🇺🇸 America`[]🔰 Proxy
 custom_proxy_group=🚧 AdGuard`select`[]REJECT`[]DIRECT
-custom_proxy_group=🔘 DIRECT`select`[]DIRECT`
+custom_proxy_group=🔘 DIRECT`select`[]DIRECT`(中国|China|GCX)
 custom_proxy_group=🇺🇳 Server`select`.*
-custom_proxy_group=🇭🇰 Hong Kong`select`(香港|港|HK|Hong Kong)`
-custom_proxy_group=🇹🇼 Taiwan`select`(台湾|台|台北|台中|新北|彰化|TW|Taiwan)`
-custom_proxy_group=🇯🇵 Japan`select`(日本|东京|大阪|埼玉|深日|穗日|沪日|京日|泉日|川日|JP|Japan)`
+custom_proxy_group=🇭🇰 Hong Kong`select`(香港|港|HK|Hong Kong)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🇹🇼 Taiwan`select`(台湾|台|台北|台中|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🇯🇵 Japan`select`(日本|东京|大阪|埼玉|深日|穗日|沪日|京日|泉日|川日|JP|Japan)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇰🇷 Korea`select`(韩国|韩|首尔|KR|Korea)`http://www.gstatic.com/generate_204`500
-custom_proxy_group=🇸🇬 Singapore`select`(新加坡|新|狮城|SG|Singapore)`
-custom_proxy_group=🇬🇧 England`select`(英国|英|伦敦|UK|England|United Kingdom)`
-custom_proxy_group=🇺🇸 America`select`(美国|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|USA|America|United States)`
+custom_proxy_group=🇸🇬 Singapore`select`(新加坡|新|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🇬🇧 England`select`(英国|英|伦敦|UK|England|United Kingdom)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🇺🇸 America`select`(美国|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|USA|America|United States)`http://www.gstatic.com/generate_204`500
 ;custom_proxy_group=🇨🇳 China`select`(中国|广州|China|GCX)
 ;设置分组标志位
 
