--- a/Config.ini
+++ b/Config.ini
@@ -35,7 +35,7 @@ surge_ruleset=🔰 Proxy,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 Proxy`select`[]🇭🇰 Hong Kong`[]🇹🇼 Taiwan`[]🇯🇵 Japan`[]🇰🇷 Korea`[]🇸🇬 Singapore`[]🇬🇧 England`[]🇺🇸 America`[]🇺🇳 Server
+custom_proxy_group=🔰 Proxy`select`[]🇭🇰 Hong Kong`[]🇹🇼 Taiwan`[]🇯🇵 Japan`[]🇰🇷 Korea`[]🇸🇬 Singapore`[]🇬🇧 England`[]🇺🇸 America`[]🇺🇳 Server`[]🇭🇰 MO
 custom_proxy_group=🎬 Streaming`select`[]🇭🇰 Hong Kong`[]🇹🇼 Taiwan`[]🇯🇵 Japan`[]🇰🇷 Korea`[]🇸🇬 Singapore`[]🇬🇧 England`[]🇺🇸 America`[]🇺🇳 Server
 custom_proxy_group=📺 CNTV`select`[]🔘 DIRECT`[]🇹🇼 Taiwan
 custom_proxy_group=🍎 Apple`select`[]🔘 DIRECT`[]🇺🇸 America`[]🔰 Proxy
@@ -45,6 +45,7 @@ custom_proxy_group=🚧 AdGuard`select`[]REJECT`[]DIRECT
 custom_proxy_group=🔘 DIRECT`select`[]DIRECT`(中国|China|GCX)
 custom_proxy_group=🇺🇳 Server`select`.*
 custom_proxy_group=🇭🇰 Hong Kong`select`(香港|港|HK|Hong Kong)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🇭🇰 MO`select`(澳门)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇹🇼 Taiwan`select`(台湾|台|台北|台中|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇯🇵 Japan`select`(日本|东京|大阪|埼玉|深日|穗日|沪日|京日|泉日|川日|JP|Japan)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇰🇷 Korea`select`(韩国|韩|首尔|KR|Korea)`http://www.gstatic.com/generate_204`500
